# AI-council

./: .claude-workspace  .env.example  .env.local  .gitignore  .gitleaks.toml  .gitleaksignore  .mcp.json.example  .pre-commit-config.yaml  .secrets.baseline  AUDIT_DASHBOARD.md  AUDIT_DASHBOARD_REVIEW.md  CHANGELOG.md  CLAUDE.md  COMPLEXITY-REDUCTION-COMPLETE.md  CONTRIBUTING.md  DISASTER_RECOVERY.md  HOSTILE_SECURITY_AUDIT.md  I18N-AUDIT-REPORT-2026-01.md  INCIDENT_RESPONSE.md  MOBILE_AUDIT.md  MOBILE_AUDIT_REPORT.md  MOBILE_NAVIGATION_AUDIT.md  PERFORMANCE_AUDIT.md  PERFORMANCE_AUDIT_REPORT.md  PLAN-I18N-IMPLEMENTATION.md  PLAN-LLM-CONFIG-LAYER.md  PLAN-PROCESS-INTEGRITY-IMPLEMENTATION.md  PLAN-SEO-URL-ROUTING.md  PLAN-UNIFIED-DELETE-SYSTEM.md  QA-REPORT-CSS-PHASE2.md  REACT-BEST-PRACTICES-REVIEW.md  README.md  SECURITY-HARDENING-COMPLETE.md  SECURITY_AUDIT.md  SECURITY_CHANGELOG.md  TECHNICAL_DEBT_AUDIT.md  check_context.py  create_project.py  dev.bat  fix_selects.py  (+8 more)
.claude/: agent-state.json  settings.json
.claude/agents/: api-contract-checker.md  app-explorer.md  build-validator.md  council-ops.md  coverage-improver.md  css-enforcer.md  dependency-watcher.md  enterprise-readiness.md  mobile-tester.md  mobile-ux-tester.md  (+7 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  pull_request_template_complexity.md
.husky/: commit-msg  pre-push
.vercel/: project.json
audit-results/: ACTION_PLAN.md  CODE_QUALITY_AUDIT_REPORT.md  FINAL_CODE_QUALITY_SUMMARY.md  LOW_EFFORT_FIXES_SUMMARY.md  MERGE_QA_REPORT.md  QA_REPORT.md  REFACTORING_VERIFICATION_SUMMARY.md  complexity-frontend.txt  console-statements.txt  duplication-frontend.md  print-statements.txt
audits/: CSS-DASHBOARD-UPDATE.md  css-25m-value-proposition.md  css-architecture-audit-2026-01-15.md  css-perfection-summary-2026-01-15.md  devops-audit-2026-01-12.md  ux-audit-2025-12-31.md
backend/: I18N_REFACTORING_STATUS.md  ai_i18n.py  attachments.py  auth.py  billing.py  byok.py  cache.py  config.py  context_loader.py  context_loader_impl.py  council.py  council_stage1.py  council_stage2.py  database.py  feature_flags.py  i18n.py  image_analyzer.py  knowledge.py  knowledge_fallback.py  leaderboard.py  llm_config.py  main.py  mock_llm.py  model_registry.py  openrouter.py  openrouter_stream.py  openrouter_stream_refactored.py  org_sync.py  personas.py  rate_limit.py  security.py  sentry.py  storage.py  triage.py  vector_store.py
councils/: README.md
docs/: CLAUDE-COMMANDS-CATALOG.md  CLAUDE_MEMORY.md  CONTENT-STUDIO-ROADMAP.md  CSS-LINT-CLEANUP-ISSUE.md  EMAIL_ONBOARDING_IMPLEMENTATION.md  I18N-TESTING-GUIDE.md  I18N-TRANSLATION-GUIDE.md  KNOWLEDGE_MANAGEMENT_AUDIT.md  LOGIN_ONBOARDING_GUIDE.md  MEMORY_SEED.txt  MOBILE_AUDIT_2025.md  ONBOARDING-IMPLEMENTATION-PLAN.md  ONBOARDING-QUICK-START.md  SECURITY.md  SERVICE_CLIENT_AUDIT.md  STAGING-ENVIRONMENT-GUIDE.md  WEBHOOK-IMPLEMENTATION-PLAN.md
frontend/: .env.example  .percy.yml  .size-limit.json  .stylelintrc.json  COPY_REWRITES.md  CSS-BUNDLE-BLOAT-ANALYSIS.md  CSS-BUNDLE-FINAL-REPORT.md  CSS-OPTIMIZATION-PHASE1-COMPLETE.md  CSS-PHASE2-COMPLETE.md  DESIGN_SYSTEM.md  README.md  SEO-IMPLEMENTATION.md  TODO-CSS-REFACTOR.md  eslint.config.js  fix-logical-properties.sh  index.html  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  postcss-strip-rtl.js  postcss.config.js  stylelint.config.js  tailwind.config.js  ts-errors.txt  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.js  vitest.config.js
migrations/: 001_knowledge_entries.sql  002_knowledge_schema_expansion.sql  003_enable_rls_hotfix.sql  004_add_curator_history.sql  005_conversation_star_archive.sql
scripts/: check_env_parity.py  clean_git_history.py  clone_to_staging.py  convert_css_to_logical.py  create-content-studio-project.sh  debt-gate-check.sh  generate_memory_seed.py  migrate_org_to_db.py  run_billing_migration.py  run_migration.py  seed_staging.py
supabase/: verify_and_fix_roles.sql
todo/: ACCESSIBILITY-LABEL-FIXES.md  ADMIN-PORTAL-ROADMAP.md  BASELINE-2026-02-05.md  CSS-PHASE2-ROADMAP.md  CURRENT-SESSION-CHANGES.md  EXIT-READINESS-25M.md  FINAL-BATCH-ACCESSIBILITY-FIXES-SUMMARY.md  ISSUE-HUNT-100.md  ISSUE-HUNT-200.md  JS-BUNDLE-OPTIMIZATION-GUIDE.md  LLM-COST-OPTIMIZATION-PLAN.md  LLM-OPS-AUDIT-2026-01-01.md  MOBILE-UX-50-ISSUES.md  MOBILE-UX-500-ISSUES-FIX-LIST.md  MOBILE-UX-FIX-PLAN.md  ONBOARDING-STATUS.md  SEO-AUDIT-2026-01-08.md  TECHNICAL-DEBT-CLEANUP-PLAN.md  UX-UI-AUDIT-2026-01-19-ENHANCED.md  UX-UI-AUDIT-2026-01-19.md  mobile-ux-issue-hunt-report.md  mobile-ux-issues.md  ux-issue-hunt-200.md  ux-issue-hunt-report.md
(+1171 files in other folders)
