[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "supabase>=2.0.0",
    "gunicorn>=21.0.0",
    "pillow>=10.0.0",  # Image optimization for uploads
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "bandit>=1.7.7",
    "detect-secrets>=1.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = ["tests", "scripts", ".venv"]
skips = ["B101"]  # Skip assert warnings (used in tests)
