[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.9.0",
    "email-validator>=2.0.0",  # Explicit for Pydantic EmailStr
    "supabase>=2.0.0",
    "gunicorn>=21.0.0",
    "pillow>=10.0.0",  # Image optimization for uploads
    "stripe>=14.0.0",  # Billing integration
    "slowapi>=0.1.9",  # Rate limiting
    "python-multipart>=0.0.9",  # File upload support for FastAPI
    "tiktoken>=0.7.0",  # Token counting for LLM cost management
    "redis>=5.0.0",  # Caching, rate limiting, job queues
    "numpy>=1.26.0",  # Vector math for embeddings/similarity
    "qdrant-client>=1.9.0",  # Vector database for semantic search
    "protobuf>=5.29.0,<6.33.4",  # Pin to avoid CVE-2026-0994 (DoS in ParseDict)
    "sentry-sdk[fastapi]>=2.0.0",  # Error monitoring
    "cryptography>=42.0.0",  # Secure token generation
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "bandit>=1.7.7",
    "detect-secrets>=1.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-testmon>=2.1.0",  # Incremental test runner for /qa workflow
    # Type checking
    "mypy>=1.11.0",
    "types-redis>=4.6.0",
    "types-Pillow>=10.2.0",
    # Staging/testing utilities
    "faker>=26.0.0",  # Test data generation for staging environment
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = ["tests", "scripts", ".venv"]
skips = ["B101"]  # Skip assert warnings (used in tests)

# Mypy type checking configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Start permissive, tighten over time
check_untyped_defs = true
ignore_missing_imports = true  # For packages without stubs
exclude = ["tests", "migrations"]

[[tool.mypy.overrides]]
module = ["backend.tests.*"]
ignore_errors = true
